# utad_car

./: Equipamento Utilizado.md  README.md
ROS/: 50-i2c-spi-gpio-udev.rules  60-hlds-laser-udev.rules  99-realsense-libusb.rules  99-utad_car-cdc-realsense.rules  99-utad_car-cdc.rules  local_rs2_camera.sh  local_udev.rules  local_utad_car_core.sh  local_utad_car_lidar.sh  local_utad_car_navigation.sh  remote_utad_car_core.sh  remote_utad_car_lidar.sh  rpi4_rs2_camera.sh  rpi4_utad_car_core.sh  rpi4_utad_car_lidar.sh  teleop_twist_keyboard.sh  utad_car_core.sh  utad_car_lidar.sh  utad_car_navigation.sh
ROS/catkin_ws/src/: README.md
ROS/catkin_ws/src/car_tf2/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/car_tf2/nodes/: static_car_tf2_broadcaster.py
ROS/catkin_ws/src/utad_car/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/utad_car_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROS/catkin_ws/src/utad_car_bringup/launch/: utad_car.launch  utad_car_lidar.launch  utad_car_model.launch  utad_car_realsense.launch  utad_car_remote.launch  utad_car_rpicamera.launch
ROS/catkin_ws/src/utad_car_bringup/launch/includes/: description.launch.xml
ROS/catkin_ws/src/utad_car_bringup/scripts/: create_udev_rules
ROS/catkin_ws/src/utad_car_bringup/src/: utad_car_diagnostics.cpp
ROS/catkin_ws/src/utad_car_core/: CMakeLists.txt  README.md  package.xml
ROS/catkin_ws/src/utad_car_core/launch/: utad_car_core.launch
ROS/catkin_ws/src/utad_car_core/nodes/: car_tf2_broadcast  motion  odometer
ROS/catkin_ws/src/utad_car_core/params/: base_local_planner_params.yaml  costmap_common_params.yaml
ROS/catkin_ws/src/utad_car_description/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/utad_car_description/urdf/: utad_car_burger.gazebo.xacro  utad_car_burger.urdf.xacro  utad_car_burger_for_autorace.gazebo.xacro  utad_car_burger_for_autorace.urdf.xacro
ROS/catkin_ws/src/utad_car_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROS/catkin_ws/src/utad_car_msgs/msg/: VersionInfo.msg
ROS/catkin_ws/src/utad_car_navigation/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/utad_car_navigation/launch/: move_base.launch  utad_car_navigation.launch
ROS/catkin_ws/src/utad_car_slam/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/utad_car_slam/launch/: utad_car_gmapping.launch  utad_car_slam.launch
docs/: Camara Intel® RealSense™ D435.md  Camera 5mp 0.575.md  Chassi de acrílico.md  Chassis de acrílico.md  Controlo dos Motores de tração.md  Criação de projetos no ROS.md  Detetor de velocidade por Infravermelhos.md  Equipamento Utilizado.md  Equipamento utilizado.md  Fontes de alimentação.md  Instalação da Camara Raspberry PI.md  Instalação da camara Intel RealSense.md  Instalação do ROS.md  Instalação do SO nos SBC.md  Intel® RealSense™ D435.md  Montagem do utad_car.md  Motor elétrico da caixa de engrenagens magnética.md  Motores de tração.md  Navegação Autonuma.md  Navegação básica do utad_car.md  Nvidia Jetson Nano 2GB develepor kit.md  O que é o ROS.md  Odómetro.md  Odômetro.md  Portátil ASUS Laptop X512DA.313.md  Processamento de Imagem.md  RPLiDAR A1M8-R6 360-degree Laser Scanner Kit.md  RPLiDAR A1M8.md  Raspberry PI 3.md  Raspberry PI 4.md  Roda ranhurada para odômetro.md  Rodas de tração.md  Rodizio giratório.md  SLAM.md  Sensor de medição de velocidade óptica infravermelho, teste do motor, módulo de optoacoplador detecção.md  Skip to the end of the images gallery Skip to the beginning of the images gallery Stepper Motor HAT for Raspberry Pi.md  Stepper Motor HAT for Raspberry Pi.md  Swap files.md  Utilização da camara Intel RealSense.md  Utilização da camara Raspberry PI.md  (+2 more)
procImg/: foreground-grabCut.py  le-image-CSV.py
utils/: README.md
utils/Raspi_MotorHAT/: DesligaMotores.py  README.md  Teste2motores.py
utils/TestScripts/: camera.py  gpioInterupt.py  gpioTeste.py  testCarMoves.py  testMotors.py
