<?xml version="1.0"?>
<package format="2">
  <name>utad_car_bringup</name>
  <version>0.1.0</version>
  <description>
    roslaunch scripts for starting the
    UTAD Car Robot a Raspberry Pi3+ powered robot.
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <maintainer email="al63116@utad.pt">Joao Pintor</maintainer>
  <url type="website">https://www.utad.pt/</url>
  
  <author email="al63116@utad.pt">Joao Pintor</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>utad_car_msgs</depend>
  <exec_depend>utad_car_description</exec_depend>
  <exec_depend>utad_car_teleop</exec_depend>
<!--  <exec_depend>joint_state_publisher</exec_depend>   -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
<!--  <exec_depend>hls_lfcd_lds_driver</exec_depend>   -->
  <!-- <exec_depend>realsense_camera</exec_depend> for TurtleBot3 Waffle using Intel RealSense Camera -->
  <!-- <exec_depend>raspicam_node</exec_depend> for TurtleBot3 Waffle Pi using Raspberry Pi Camera -->
</package>
