<?xml version="1.0"?>
<package format="2">
  <name>utad_car_msgs</name>
  <version>0.1.0</version>
  <description>
    Message and service types: custom messages and services for utad_car packages
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <maintainer email="al63116@utad.pt">Joao Pintor</maintainer>
  <url type="website">https://www.utad.pt/</url>
  <author email="al63116@utad.pt">Joao Pintor</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
